--- a/ISSE12/main.tex
+++ b/ISSE12/main.tex
@@ -26,6 +26,9 @@
 \usepackage{subfigure}
 \usepackage{fancyhdr}
 
+\usepackage{tikz}
+\usetikzlibrary{arrows,automata}
+
 % table of contents depth
 \setcounter{tocdepth}{2}
 
