--- a/ISSE12/mybib.bib
+++ b/ISSE12/mybib.bib
@@ -6,6 +6,16 @@
 }
 
 
+
+
+@InProceedings{PikeWNG2012,
+  author = 	 {Pike, Lee and Wegmann, Nis and Niller, Sebastian and Goodloe, Alwyn},
+  title = 	 {Experience Report: Do-It-Yourself High-Assurance Compiler},
+  booktitle = {Proceedings of the 17th {ACM}  {SIGPLAN} Conference on Functional Programming},
+  year = 	 {2012},
+  publisher = {ACM}
+}
+
 @inbook{smt,
   author    = "Clark Barrett and Roberto Sebastiani and Sanjit Seshia and Cesare Tinelli",
   title     = "Satisfiability Modulo Theories",
@@ -22,6 +32,18 @@
   author = {Pike, Lee and Niller, Sebastian and Goodloe, Alwyn and Wegmann, Nis},
   booktitle = {Proceedings of the 1st Intl. Conference on Runtime Verification},
   year = {2010}
+}
+
+
+@article{leroy,
+ author = {Leroy, Xavier},
+ title = {Formal verification of a realistic compiler},
+ journal = {Communications of the ACM},
+ volume = {52},
+ issue = {7},
+ month = jul,
+ year = {2009},
+ pages = {107--115}
 }
 
 @book{PeytonJones02,
@@ -66,8 +88,6 @@
 %
 %
 %
-
-
 
 @article{ariane,
   author    = {Bashar Nuseibeh},
