more comments to Reviews

--- a/ISSE12/biblio.bib
+++ b/ISSE12/biblio.bib
@@ -592,7 +592,7 @@ publisher = {IEEE Computer Society},
 @InProceedings{BarringerGHS04,
   author = 	 {H. Barringer and  A. Goldberg  and K. Havelund and  K. Sen},
   title = 	 {Rule-Based Runtime Verification},
-  booktitle = 	 {Verification, Model Checking, and Abstract Interpretation (VMCAI)},
+  booktitle = 	 {Verification, Model Checking, and Abstract Interpretation (VMCI)},
   year = 	 {2004},
   series = {LNCS},
   number = 	 {2937},
