forgot to center new fig

--- a/ISSE12/copilot_tutorial.tex
+++ b/ISSE12/copilot_tutorial.tex
@@ -702,6 +702,7 @@ except for the type signatures and the explicit sharing annotations.
 
 
 \begin{figure*}
+\begin{center}
   \begin{tikzpicture}[->, node distance=4cm, auto, shorten >=1pt, bend angle=45,
       thick]
     \tikzstyle{every state}=[rectangle, rounded corners]
@@ -740,6 +741,7 @@ except for the type signatures and the explicit sharing annotations.
     %%     edge                 node {0,1,R} (Libs)
     %% (SBV) edge [bend left]   node {1,0,R} ();
   \end{tikzpicture}
+\end{center}
   \caption{The Copilot toolchain.}
   \label{fig:toolchain}
 \end{figure*}
