corrected some typos and wordsmithing

--- a/ISSE12/conclusion.tex
+++ b/ISSE12/conclusion.tex
@@ -24,21 +24,22 @@ Techniques to improve the efficiency of evaluating eDSLs are needed.
 Fortunately, monitoring code is terse, in general.  
 
 \paragraph{Assurance}
-The lightweight approach to monitor assurance discussed  in
-Section~\ref{sec:tools}  is described in more detail
+The lightweight approach to monitor assurance discussed in
+Section~\ref{sec:tools} is described in more detail
 in~\cite{PikeWNG2012}.  The current framework for front-end/back-end
 testing is built on Quickcheck, which does not provide coverage
-testing capability.  Given the  criticality  of the
-monitors, DO-178~\cite{DO178B} woul d require that MC/DC testing be
-performed. Adding this capability to the toolchain is a challenge for
-future work.  
+testing capability.  Given the criticality of the monitors,
+DO-178~\cite{DO178B} would require that MC/DC testing be performed if
+they were to be employed in industrial avionics. Adding this
+capability to the toolchain is a challenge for future work.
 
-  A more heavyweight approach to verification is exemplified by the
-  CompCert~\cite{leroy} C compiler, which we could use for the
-  generated C programs.  A similar approach could be applied to
-  generate proofs or certificates that the C monitors created by the
-  back-end meet the specification given by the operational
-  semantics. 
+A more heavyweight approach to verification is exemplified by the
+CompCert~\cite{leroy} C compiler.   Adapting a
+similar approach, we could generate proofs or certificates that the C
+monitors created by the back-end meet the specification given by the
+Copilot operational semantics and then use the CompCert compiler to
+provide a certificate that the executable created during compilation
+is correct.
 
 \paragraph{Scheduling monitors.}
 In the experiments described in Section~\ref{sec:case-study}, we use hardware
