--- a/ISSE12/main.tex
+++ b/ISSE12/main.tex
@@ -137,7 +137,7 @@ NASA Langley Research Center, Hampton, Virginia  \\
 \begin{document}
 
 \maketitle
-\abstract{ Abstract Runtime verification (RV) is a natural fit for
+\abstract{ Runtime verification (RV) is a natural fit for
   ultra-critical systems that require correct software behavior.  Due
   to the low reliability of commodity hardware and the adversity of
   operational environments, it is common in ultra-critical
