my latest round of changes mainly a bunch of small things

--- a/ISSE12/biblio.bib
+++ b/ISSE12/biblio.bib
@@ -228,6 +228,21 @@ note = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-list
   year =         {1992}
   }
 
+@Misc{ARINC653-10,
+  author =       {{Aeronautical Radio}},
+  howpublished =       {ARINC, Inc.},
+  title =        {Avionics Application Software Standard Interface: {ARINC} Specification 653P1-3},
+ note = {{ARINC} 653 Part 1},
+  year =         {2010}
+  }
+@Misc{ARINC653-12,
+  author =       {{Aeronautical Radio}},
+  howpublished =       {ARINC, Inc.},
+  title =        {Avionics Application Software Standard Interface: {ARINC} Specification 653P2-2 Extended Services},
+ note = {{ARINC} 653 Part 2},
+  year =         {2012}
+  }
+
 @Misc{DO254,
   key =       {RTCA},
   howpublished =       {RTCA, Inc.},
