--- a/ISSE12/intro.tex
+++ b/ISSE12/intro.tex
@@ -23,7 +23,7 @@ Runtime verification (RV), where monitors detect and respond to property
 violations at runtime, holds particular potential for ensuring that
 ultra-critical systems are in fact ultra-reliable, but there are challenges.  In
 ultra-critical systems, RV must account for both software and hardware faults.
-Whereas software faults are design errors, hardware faults can be the result of
+Whereas software faults are design errors, hardware faults can also be a result of
 random failure.  
 
 For the purposes of this paper, assume that characterizing a system as
