--- a/ISSE12/main.tex
+++ b/ISSE12/main.tex
@@ -91,7 +91,7 @@
 
 \newenvironment{myfig}{\begin{figure*}}{\end{figure*}}
 
-\usepackage{subfigure}
+%\usepackage{subfigure}
 
 
 
@@ -188,6 +188,8 @@ NASA Langley Research Center, Hampton, Virginia  \\
 %\input watchmen
 
 \input flight-tests
+
+\input mavlink
 
 %\input target
 %\input speclang
